...

        <TextView
            android:gravity="center"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="player"
            android:id="@+id/player_name"
            android:ellipsize="end"
            android:maxLines="1"
            />

        <TextView
            android:gravity="center"
...
